# This section defines the build system requirements
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


# Project metadata
[project]
version = "0.1.0"
name = "Non-Prehensile Manipulation"  # TODO
description = "Extension of Non-Prehensile Manipulation for Orbit"  # TODO
keywords = ["extension", "Non-Prehensile", "Manipulation", "orbit"]  # TODO
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
classifiers = [
  "Programming Language :: Python :: 3",
]
authors = [
  {name = "Afshin Zeinaddini Meymand", email = "a.zeinaddini@studenti.polito.it"},  # TODO
]
maintainers = [
  {name = "Afshin Zeinaddini Meymand", email = "a.zeinaddini@studenti.polito.it"},  # TODO
]


# Tool dependent subtables
[tool.setuptools]
py-modules = [
  'orbit'
]  # TODO, add modules required for your extension
